Migrate tests to JUnit Jupiter (#363)
* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor code cleanup
* Ban JUnit4 imports

Co-authored-by: Mark Waite <mark.earl.waite@gmail.com>